--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "syntheseus-local-retro"
 description = "Fork of LocalRetro for use in the syntheseus library"
-version = "0.4.0"
-dependencies = ["dgllife", "chardet"]
+version = "0.5.0"
+dependencies = ["dgllife", "chardet", "pandas<2.2"]
 
 [tool.setuptools]
 package-dir = {"local_retro" = "local_retro"}
